--- a/static/form.html
+++ b/static/form.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html lang="en">
+  <!-- restyled by huji, proud 🦎🪽✨⬆️☁️ -->
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wrench</title>
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,54 +16,16 @@
       rel="stylesheet"
     />
     <meta content="#1a1a1a" name="theme-color" />
-    <!-- restyled by huji, proud 🦎🪽✨⬆️☁️ -->
-    <style>
-      textarea {
-        min-height: 20rem;
-      }
-
-      #comment {
-        min-height: 5rem;
-      }
-
-      select {
-        appearance: none;
-        border-radius: 0.375rem;
-        padding: 0.5rem 1rem;
-        background-color: var(--c-dark-grey);
-      }
-
-      select > option {
-        padding: 0.5rem;
-        background-color: var(--c-dark-grey);
-      }
-
-      select:focus,
-      input:focus,
-      textarea:focus {
-        border-color: var(--c-white);
-        outline: none;
-      }
-
-      input[type="button"] {
-        background-color: var(--c-purple);
-      }
-
-      input[type="button"]:hover {
-        opacity: 0.8;
-      }
-    </style>
+    <script type="module" crossorigin src="/assets/form-DbSjCTjQ.js"></script>
+    <link rel="modulepreload" crossorigin href="/assets/ascii_styles-CmJAlacG.js">
+    <link rel="stylesheet" crossorigin href="/assets/ascii_styles-TySRPM5g.css">
+    <link rel="stylesheet" crossorigin href="/assets/form-CMb-HqOc.css">
   </head>
 
   <body class="flex items-center justify-center min-h-screen">
     <div class="p-8 rounded-lg w-full max-w-6xl">
-      <div class="text-center w-full mt-4 mb-2">
-        <h1 class="large white">
-          <a class="subtle-hover" href="/">Wrench Submit</a>
-        </h1>
-      </div>
-
-      <div class="self-center text-center mb-6">
+      <h1 class="large mb-6 text-center">Wrench Submit</h1>
+      <div class="mb-6 text-center">
         <a
           href="https://github.com/ryukzak/wrench"
           class="purple hover"
@@ -81,31 +47,9 @@
           >[variants]</a
         >
         <span class="grey separator-char">|</span>
-        <button onclick="onInvertClick()" class="blue hover">
+        <button id="invert-theme-button" class="self-center blue hover">
           [invert_theme]
         </button>
-        <script>
-          function onInvertClick() {
-            document.body.classList.toggle("inverted");
-            window.localStorage.setItem(
-              "prefers-color-scheme",
-              document.body.classList.contains("inverted") ? "light" : "dark",
-            );
-          }
-
-          if (
-            window.matchMedia &&
-            window.localStorage.getItem("prefers-color-scheme") === null
-          ) {
-            if (!window.matchMedia("(prefers-color-scheme: dark)").matches) {
-              document.body.classList.add("inverted");
-            }
-          } else if (
-            window.localStorage.getItem("prefers-color-scheme") === "light"
-          ) {
-            document.body.classList.add("inverted");
-          }
-        </script>
       </div>
       <form
         id="main-form"
@@ -122,6 +66,8 @@
             class="white subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"
           >
             <option value="" selected disabled>Select a variant</option>
+            <!-- we don't need prettier to mess with ssr  -->
+            <!-- prettier-ignore -->
             {{variants}}
           </select>
         </div>
@@ -155,7 +101,7 @@
           <textarea
             id="comment"
             name="comment"
-            class="whitespace-pre overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"
+            class="min-h-20 whitespace-pre overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"
           ></textarea>
         </div>
 
@@ -181,239 +127,19 @@
 
         <div class="text-center">
           <input
+            id="submit-button"
             type="button"
             value="Submit"
-            onclick="Submit()"
-            class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white"
+            class="bg-custom-purple hover:opacity-80 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white"
           />
         </div>
 
-        <script>
-          function Submit() {
-            let form = document.getElementById("main-form");
-
-            if (form.checkValidity()) {
-              form.submit();
-            } else {
-              form.reportValidity();
-            }
-          }
-        </script>
-
-        <div class="text-center grey">/* {{version}} */</div>
+        <div class="text-center grey">
+          <!-- we don't need prettier to mess with ssr  -->
+          <!-- prettier-ignore -->
+          /* {{version}} */
+        </div>
       </form>
     </div>
-    <style>
-      body {
-        --c-black: #1a1a1a;
-        --c-white: #e1e1e1;
-        --c-grey: #898989;
-        --c-dark-grey: #222224;
-        --c-purple: #b462ff;
-        --c-fuschia: #ff45b4;
-        --c-blue: #18b6ff;
-        --c-green: #1beb9e;
-        --c-orange: #ff9528;
-        --c-orange-low-saturation: #a5692d;
-        --c-yellow: #dddd25;
-        --line: 2.5ch;
-        --font: "IBM", monospace;
-      }
-
-      body.inverted {
-        --c-black: #d5d5d5;
-        --c-white: #2a2830;
-        --c-dark-grey: #e4e4e7;
-        --c-grey: #7e7e7e;
-        --c-purple: #6b1fa3;
-        --c-fuschia: #f50777;
-        --c-blue: #0b8cff;
-        --c-green: #00a76c;
-        --c-orange: #dd7200;
-        --c-orange-low-saturation: #d08c47;
-        --c-yellow: #949700;
-      }
-
-      .orange-low-saturation {
-        color: var(--c-orange-low-saturation);
-        --c-current: var(--c-orange-low-saturation);
-      }
-
-      .black {
-        color: var(--c-black);
-        --c-current: var(--c-black);
-      }
-
-      .white {
-        color: var(--c-white);
-        --c-current: var(--c-white);
-      }
-
-      .grey {
-        color: var(--c-grey);
-        --c-current: var(--c-grey);
-      }
-
-      .purple {
-        color: var(--c-purple);
-        --c-current: var(--c-purple);
-      }
-
-      .fuschia {
-        color: var(--c-fuschia);
-        --c-current: var(--c-fuschia);
-      }
-
-      .blue {
-        color: var(--c-blue);
-        --c-current: var(--c-blue);
-      }
-
-      .green {
-        color: var(--c-green);
-        --c-current: var(--c-green);
-      }
-
-      .orange {
-        color: var(--c-orange);
-        --c-current: var(--c-orange);
-      }
-
-      .yellow {
-        color: var(--c-yellow);
-        --c-current: var(--c-yellow);
-      }
-
-      .bg-dark-gray {
-        background-color: var(--c-dark-grey);
-      }
-
-      a {
-        color: var(--c-current);
-        text-decoration: none;
-      }
-
-      a:hover,
-      .selected,
-      .hover:hover {
-        color: var(--c-black);
-        background: var(--c-current);
-        box-shadow:
-          0.4ch 0 0 0 var(--c-current),
-          -0.3ch 0 0 0 var(--c-current),
-          0.4ch 0.2ch 0 0 var(--c-current),
-          -0.3ch 0.2ch 0 0 var(--c-current);
-        opacity: 0.8;
-      }
-
-      .large {
-        font-size: 2em;
-        line-height: 1.11111111em;
-        font-weight: 200;
-      }
-
-      .italic {
-        font-style: italic;
-      }
-
-      .columns {
-        width: 100%;
-        column-count: 2;
-        column-gap: 1ch;
-      }
-
-      .noselect {
-        user-select: none;
-      }
-
-      .break-anywhere {
-        line-break: anywhere;
-      }
-
-      html,
-      body {
-        margin: 0;
-        background: var(--c-black);
-        color: var(--c-white);
-        min-height: 100vh;
-        font-family: var(--font);
-        font-weight: 400;
-        line-height: var(--line);
-        letter-spacing: 0.01em;
-      }
-
-      .separator-char {
-        display: none;
-      }
-
-      body {
-        font-size: 3.97vw;
-      }
-
-      @media (min-width: 768px) {
-        body {
-          font-size: 2 * 0.7vw;
-        }
-
-        .separator-char {
-          display: contents;
-        }
-      }
-
-      @media (min-width: 1024px) {
-        body {
-          font-size: 1vw;
-          overflow: auto;
-        }
-
-        .large {
-          font-size: 4vw;
-          line-height: 1.11111111em;
-          font-weight: 200;
-        }
-      }
-
-      ::selection {
-        color: #000000;
-        background: var(--c-grey);
-      }
-
-      button {
-        display: inline;
-        font-family: inherit;
-        font-weight: inherit;
-        letter-spacing: inherit;
-        padding: 0;
-        margin: 0;
-        background: transparent;
-        border: none;
-        outline: none;
-      }
-
-      .hover:hover {
-        cursor: pointer;
-      }
-
-      .pointer-events-none {
-        pointer-events: none;
-      }
-
-      body.invert canvas {
-        opacity: 0.05;
-        filter: none;
-        mix-blend-mode: normal;
-      }
-
-      .subtle-hover:hover {
-        box-shadow: none;
-        cursor: pointer;
-        transition: all 0.05s;
-        opacity: 0.8;
-      }
-
-      .title {
-        font-weight: lighter;
-      }
-    </style>
   </body>
 </html>
