fix (static): replace minified files with readable ones

--- a/static/form.html
+++ b/static/form.html
@@ -1,25 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <!-- restyled by huji, proud 🦎🪽✨⬆️☁️ -->
 
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta content="#1a1a1a" name="theme-color" />
     <title>Wrench</title>
-
-
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
-    <meta content="#1a1a1a" name="theme-color" />
-    <script type="module" crossorigin src="/assets/form-DbSjCTjQ.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/ascii_styles-CmJAlacG.js">
-    <link rel="stylesheet" crossorigin href="/assets/ascii_styles-TySRPM5g.css">
-    <link rel="stylesheet" crossorigin href="/assets/form-CMb-HqOc.css">
+
+    <link rel="stylesheet" href="/assets/ascii.css" />
+    <script type="module" defer src="/assets/on_invert_click.js"></script>
+    <script type="module" src="/assets/form.js"></script>
   </head>
 
   <body class="flex items-center justify-center min-h-screen">
