--- a/static/result.html
+++ b/static/result.html
@@ -1,16 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <!-- restyled by huji, proud 🦎🪽✨⬆️☁️ -->
 
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta content="#1a1a1a" name="theme-color" />
     <title>Simulation Results</title>
-    <script
-      defer
-      src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"
-    ></script>
-
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,10 +14,15 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
-    <meta content="#1a1a1a" name="theme-color" />
-    <script type="module" crossorigin src="/assets/result-DrSuv2iN.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/ascii_styles-CmJAlacG.js">
-    <link rel="stylesheet" crossorigin href="/assets/ascii_styles-TySRPM5g.css">
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"
+    ></script>
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+
+    <link rel="stylesheet" href="/assets/ascii.css" />
+    <script type="module" defer src="/assets/on_invert_click.js"></script>
+    <script type="module" defer src="/assets/result.js"></script>
   </head>
 
   <body class="full flex flex-col justify-center items-center min-h-screen">
