fix (static): fix small issues and try to delete unused css rules

--- a/static/result.html
+++ b/static/result.html
@@ -21,15 +21,17 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 
     <link rel="stylesheet" href="/assets/ascii.css" />
-    <script type="module" defer src="/assets/on_invert_click.js"></script>
-    <script type="module" defer src="/assets/result.js"></script>
+    <script defer src="/assets/on_invert_click.js"></script>
+    <script defer src="/assets/result.js"></script>
   </head>
 
-  <body class="full flex flex-col justify-center items-center min-h-screen">
+  <body
+    class="dark full flex flex-col justify-center items-center min-h-screen"
+  >
     <div class="text-center w-full mt-4 mb-2">
       <!-- Добавляем отступ снизу -->
       <h1 class="large white">
-        <a class="subtle-hover" href="/">Wrench Report</a>
+        <a class="white hover" href="/">Wrench Report</a>
       </h1>
     </div>
 
