--- a/static/form.html
+++ b/static/form.html
@@ -10,6 +10,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
@@ -17,11 +18,12 @@
     />
 
     <link rel="stylesheet" href="/assets/ascii.css" />
+
     <script type="module" defer src="/assets/on_invert_click.js"></script>
     <script type="module" src="/assets/form.js"></script>
   </head>
 
-  <body class="flex items-center justify-center min-h-screen">
+  <body class="dark flex items-center justify-center min-h-screen">
     <div class="p-8 rounded-lg w-full max-w-6xl">
       <h1 class="large mb-6 text-center">Wrench Submit</h1>
       <div class="mb-6 text-center">
@@ -58,11 +60,11 @@
         class="space-y-6"
       >
         <div class="mb-6">
-          <label for="variant" class="block grey">/* variant */</label>
+          <label class="block grey">/* variant */</label>
           <select
             id="variant"
             name="variant"
-            class="white subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"
+            class="white hover:opacity-80 bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"
           >
             <option value="" selected disabled>Select a variant</option>
             <!-- we don't need prettier to mess with ssr  -->
@@ -76,7 +78,7 @@
           <select
             id="isa"
             name="isa"
-            class="white subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"
+            class="white hover:opacity-80 bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"
           >
             <option value="risc-iv-32" selected>risc-iv-32</option>
             <option value="f32a">f32a</option>
@@ -91,7 +93,7 @@
             id="name"
             name="name"
             required
-            class="whitespace-pre overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"
+            class="whitespace-pre overflow-x-auto hover:opacity-80 bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"
           />
         </div>
 
@@ -100,7 +102,7 @@
           <textarea
             id="comment"
             name="comment"
-            class="min-h-20 whitespace-pre overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"
+            class="min-h-[6rem] whitespace-pre overflow-x-auto hover:opacity-80 bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"
           ></textarea>
         </div>
 
@@ -110,7 +112,7 @@
             id="asm"
             name="asm"
             required
-            class="whitespace-pre overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"
+            class="whitespace-pre min-h-[20rem] overflow-x-auto hover:opacity-80 bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"
           ></textarea>
         </div>
 
@@ -120,7 +122,7 @@
             id="config"
             name="config"
             required
-            class="whitespace-pre overflow-x-auto subtle-hover bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"
+            class="whitespace-pre min-h-[20rem] overflow-x-auto hover:opacity-80 bg-dark-gray mt-1 block w-full px-3 py-2 border border-zinc-400 rounded-md"
           ></textarea>
         </div>
 
@@ -129,7 +131,7 @@
             id="submit-button"
             type="button"
             value="Submit"
-            class="bg-custom-purple hover:opacity-80 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white"
+            class="bg-[var(--c-purple)] hover:opacity-80 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white"
           />
         </div>
 
