fix! (static): fix wrong import paths in html

--- a/static/form.html
+++ b/static/form.html
@@ -17,10 +17,10 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./assets/ascii.css" />
+    <link rel="stylesheet" href="/assets/ascii.css" />
 
-    <script type="module" defer src="./assets/on_invert_click.js"></script>
-    <script type="module" src="./assets/form.js"></script>
+    <script type="module" defer src="/assets/on_invert_click.js"></script>
+    <script type="module" src="/assets/form.js"></script>
   </head>
 
   <body
