--- a/static/result.html
+++ b/static/result.html
@@ -20,9 +20,9 @@
     ></script>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 
-    <link rel="stylesheet" href="./assets/ascii.css" />
-    <script defer src="./assets/on_invert_click.js"></script>
-    <script defer src="./assets/result.js"></script>
+    <link rel="stylesheet" href="bun update/assets/ascii.css" />
+    <script defer src="/assets/on_invert_click.js"></script>
+    <script defer src="/assets/result.js"></script>
   </head>
 
   <body
