--- a/static/result.html
+++ b/static/result.html
@@ -18,9 +18,9 @@
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"
     ></script>
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 
-    <link rel="stylesheet" href="bun update/assets/ascii.css" />
+    <link rel="stylesheet" href="/assets/ascii.css" />
     <script defer src="/assets/on_invert_click.js"></script>
     <script defer src="/assets/result.js"></script>
   </head>
@@ -116,7 +116,7 @@
             >
               <h2
                 id="accordion-collapse-heading-assembler"
-                class="text-[var(--c-orange-low-saturation)] vim-folded flex items-center justify-between w-full text-left hover:opacity-80"
+                class="text-[var(--c-orange-low-saturation)] vim-folded flex items-center justify-between w-full text-left hover:opacity-80 hover:bg-[var(--c-white)] hover:text-[var(--c-black)] hover:cursor-pointer"
                 data-accordion-target="#accordion-collapse-body-assembler"
                 aria-expanded="true"
                 aria-controls="accordion-collapse-body-assembler"
