--- a/static/form.html
+++ b/static/form.html
@@ -27,7 +27,7 @@
     class="dark bg-[var(--c-black)] text-[var(--c-white)] flex items-center justify-center min-h-screen"
   >
     <div class="p-8 rounded-lg w-full max-w-[80vw]">
-      <h1 class="text-6xl mb-6 text-center">Wrench Submit</h1>
+      <h1 class="mb-6 text-6xl text-center">Wrench Submit</h1>
       <div class="mb-6 text-center">
         <a
           href="https://github.com/ryukzak/wrench"
