--- a/static/result.html
+++ b/static/result.html
@@ -28,7 +28,7 @@
   <body
     class="dark bg-[var(--c-black)] text-[var(--c-white)] full flex flex-col items-center min-h-screen"
   >
-    <div class="text-center w-full mt-4 mb-6">
+    <div class="w-full mt-4 mb-6 text-center">
       <!-- Добавляем отступ снизу -->
       <a
         class="text-6xl text-[var(--c-white)] hover:text-[var(--c-black)] hover:bg-[var(--c-white)] cursor-pointer"
@@ -67,7 +67,7 @@
       </button>
     </div>
 
-    <div class="self-center flex flex-wrap gap-8 w-full p-4 mt-8 pr-8 pl-8">
+    <div class="flex flex-wrap self-center w-full gap-8 p-4 pl-8 pr-8 mt-8">
       <div class="flex-1 min-w-[300px] max-w-[50%] mt-6">
         <div>
           <div>
@@ -81,7 +81,10 @@
             </p>
           </div>
           <div>
-            <h2 id="empty-comment-header" class="hidden grey mb-4">
+            <h2
+              id="empty-comment-header"
+              class="hidden mb-4 text-[var(--c-grey)]"
+            >
               /* comment: not found */
             </h2>
             <div id="comment-header">
@@ -97,7 +100,7 @@
 
           <div>
             <div
-              class="pr-6 flex flex-row justify-between items-center mt-6 mb-4"
+              class="flex flex-row items-center justify-between pr-6 mt-6 mb-4"
             >
               <span class="text-[var(--c-grey)]">/* assembler_code */</span>
               <button
@@ -130,7 +133,7 @@
               >
                 <pre
                   id="assembler-code-text-element"
-                  class="pb-4 rounded-lg overflow-x-auto"
+                  class="pb-4 overflow-x-auto rounded-lg"
                 >
 {{assembler_code}}</pre
                 >
@@ -140,7 +143,7 @@
 
           <div>
             <div
-              class="pr-6 flex flex-row justify-between items-center mt-6 mb-4"
+              class="flex flex-row items-center justify-between pr-6 mt-6 mb-4"
             >
               <span class="text-[var(--c-grey)]">/* simulation_config */</span>
               <button
@@ -173,7 +176,7 @@
               >
                 <pre
                   id="simulation-config-text-element"
-                  class="pb-4 rounded-lg overflow-x-auto"
+                  class="pb-4 overflow-x-auto rounded-lg"
                 >
 {{yaml_content}}</pre
                 >
@@ -294,7 +297,7 @@
             class="hidden"
             aria-labelledby="accordion-collapse-heading-dump"
           >
-            <pre id="dump-text-element" class="pb-4 rounded-lg overflow-x-auto">
+            <pre id="dump-text-element" class="pb-4 overflow-x-auto rounded-lg">
 {{dump}}</pre
             >
           </div>
